# hibiscus

./: README.md  pubspec.yaml
.github/workflows/: releases.yaml
android/app/src/main/: AndroidManifest.xml
ios/Runner/: Info.plist
lib/: main.dart
lib/browser/: browser_controller.dart  browser_entry.dart  browser_page.dart  browser_state.dart  simple_browser.dart
lib/src/router/: router.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: cache.dart  download.dart  init.dart  models.dart  models.freezed.dart  search.dart  settings.dart  sync.dart  sync.freezed.dart  user.dart  video.dart
lib/src/services/: app_logger.dart  image_cache_service.dart  log_export_service.dart  recommendations_service.dart  remote_config_service.dart  rust_kv_store.dart  update_service.dart  webdav_sync_service.dart
lib/src/services/player/: better_player_adapter.dart  media_kit_player.dart  player.dart  player_factory.dart  player_manager.dart  player_service.dart
lib/src/state/: nav_state.dart  search_state.dart  settings_state.dart  state.dart  subscriptions_state.dart
lib/src/ui/pages/: download_detail_page.dart  downloads_page.dart  history_page.dart  home_page.dart  log_viewer_page.dart  login_page.dart  settings_page.dart  subscriptions_page.dart  video_detail_page.dart  webdav_settings_page.dart
lib/src/ui/shell/: app_shell.dart
lib/src/ui/widgets/: cached_image.dart  (+5 more)
macos/Flutter/: GeneratedPluginRegistrant.swift
rust/: Cargo.toml
rust/migrations/: V1__init.sql  V2__drop_watch_later.sql  V3__rebuild_downloads.sql  V5__add_cache_tables.sql  V7__history_soft_delete.sql  V8__downloads_paths_basename.sql  V9__telemetry_queue.sql
rust/src/: frb_generated.rs
rust/src/api/: cache.rs  download.rs  init.rs  mod.rs  models.rs  search.rs  settings.rs  sync.rs  user.rs  video.rs
rust/src/core/: mod.rs  network.rs  otlp.rs  parser.rs  runtime.rs  storage.rs  webdav.rs
rust/src/core/cache/: image_cache.rs  mod.rs  utils.rs  web_cache.rs
scripts/: build-ipa.sh
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
