[package]
name = "rust_lib_hibiscus"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Flutter Rust Bridge
flutter_rust_bridge = { version = "=2.11.1", default-features = false, features = [
        "anyhow",
        "dart-opaque",
        # "log",
        "portable-atomic",
        "rust-async",
        "thread-pool",
        "user-utils",
        "wasm-start",
] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# HTTP Client
reqwest_cookie_store = "0.8"

# HTML Parsing
scraper = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }

# Error Handling
anyhow = "1"
thiserror = "2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
url = "2"
urlencoding = "2"
uuid = { version = "=1.15.1", features = ["v4"] }
 
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.11"
once_cell = "1"
parking_lot = "0.12"
regex = "1"
futures-util = "0.3"
md5 = "0.7"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
prost = "0.13"
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "trace"] }
opentelemetry-proto = { version = "0.27", features = ["gen-tonic", "trace"] }

# WebDAV sync
aes-gcm = "0.10"
flate2 = "1"
base64 = "0.22"
rand = "0.8"

[target.'cfg(target_os = "android")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["cookies", "json", "stream", "rustls-tls-webpki-roots"] }
reqwest_dav = { version = "0.2.2",  default-features = false, features = ["rustls-tls-webpki-roots"]  }

[target.'cfg(not(target_os = "android"))'.dependencies]
reqwest = { version = "0.12", features = ["cookies", "json", "stream"] }
reqwest_dav = { version = "0.2.2" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
